prevent excessive wrapping

--- a/pgml-dashboard/src/components/navigation/left_nav/docs/docs.scss
+++ b/pgml-dashboard/src/components/navigation/left_nav/docs/docs.scss
@@ -52,7 +52,11 @@ div[data-controller="navigation-left-nav-docs"] {
         padding: 8px 0px 8px 8px;
         border-radius: 4px;
     }
-    
+
+    .nav {
+        font-size: 16px;
+    }
+
     .nav-link {
         padding: 8px;
     }
