--- a/pgml-dashboard/static/css/scss/abstracts/variables.scss
+++ b/pgml-dashboard/static/css/scss/abstracts/variables.scss
@@ -253,7 +253,7 @@ $left-nav-w: 17rem;
 $left-nav-w-collapsed: 88px;
 
 // Docs Left Nav
-$docs-left-nav-w: 260px;
+$docs-left-nav-w: 300px;
 
 // WebApp Content Container
 $webapp-content-max-width: 1224px;
